ags (1.3.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed paste only as within defined offset of AgsNotation and AgsAutomation
	* fixed ags_notation_edit_draw_selection() to use vscrollbar to determine y offset
	* improved selection to select only within area

ags (1.3.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed buffer-overflow in ags_synth_generator.c
	* improved ags.rc

ags (1.3.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed possible unitialized AgsAudioSignal in AgsApplySynth
	* fixed all wrong string vector static initializers from char **strv to char *strv[]
	* fixed arbritary return in drawing functions without destroying cairo_t

ags (1.3.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed accessing uninitialized pointer in ags_simple_file.c
	* fixed cursor positioning in AgsAutomationEditor
	* improved position labels of AgsNotationToolbar and AgsAutomationToolbar
	* updated ags_notation_test_find_near_timestamp() and ags_automation_test_find_near_timestamp()
	* minor-fixes in ags.rc

ags (1.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented 4 paste modes of notation and automation editor
	* implemented AgsScale, AgsScaleBox, AgsVScaleBox, AgsHScaleBox and AgsScrolledScaleBox in libags-gui
	* implemented segmented automation
	* refactored AgsAutomationEditor
	* extended chap1.xml added sections about AgsMainLoop and common interfaces
	* extended all chapters to provide code tag to functions and added parameter types
	* fixed direct callback connect from libags-audio in ags_notation_editor.c
	* fixed missing callback AgsMachine::resize-audio-channels connect in ags_notation_editor.c

ags (1.2.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_channel_get_level()
	* implemented ags_channel_recursive_reset_recall_id()
	* implemented ags_channel_recursive_init()