@@ -32,8 +32,8 @@
 
 #include <pthread.h>
 
-#define AGS_FUNCTIONAL_TEST_UTIL_REACTION_TIME (125000)
-#define AGS_FUNCTIONAL_TEST_UTIL_REACTION_TIME_LONG (500000)
+#define AGS_FUNCTIONAL_TEST_UTIL_REACTION_TIME (1000000)
+#define AGS_FUNCTIONAL_TEST_UTIL_REACTION_TIME_LONG (2000000)
 
 gboolean ags_functional_test_util_driver_prepare(GSource *source,
 						 gint *timeout_);
@@ -66,7 +66,7 @@ struct _AddTest{
 };
 
 struct timespec ags_functional_test_util_default_timeout = {
-  20,
+  59,
   0,
 };
 
