@@ -1,3 +1,9 @@
+ags (1.3.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags_notation.c and ags_automation.c to always match timestamp
+	* increased timeouts of functional tests because build environment might have not much power
+
 ags (1.3.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
